# farmanb-school

./: .gitignore  AdmissionsEssay.odt  ProjectHome.md
Coherence/: Coherence.jws
Coherence/UpdateOrder/: UpdateOrder.jpr
Coherence/UpdateOrder/Coherence.Schemas/: orders-cache-client.cmd  tangosol-coherence-override.xml
Coherence/unix/: orders-cache-server.sh
Coherence/windows/: orders-cache-client.cmd  orders-cache-server.cmd
GradSchool/Dartmouth/: AdmissionsEssay.doc
JobStuff/: .gitignore
JobStuff/CV/: .gitignore
JobStuff/CV/tech/: .gitignore
JobStuff/CV/tex/: CV-BFarman.tex  pdf
JobStuff/cover.letters/: ARA.txt  Generic.txt  internship.txt
JobStuff/cover.letters/tech/: .gitignore
JobStuff/publication.list/tex/: pdf  publication.list.tex
JobStuff/research.statement/: .gitignore
JobStuff/research.statement/tex/: biblio.bib  research.statement.tex
JobStuff/resume/: resume-retail.tex  resume.doc  resume.tex  resume.txt
JobStuff/resume/Google/: resume.tex
JobStuff/resumes/: .gitignore
JobStuff/resumes/math/: .gitignore
JobStuff/resumes/old/: resume.tex  resume.txt
JobStuff/teaching.philosophy/tex/: biblio.bib  pdf  teaching.philosophy.tex
JobStuff/teaching.portfolio/tex/: courses.tex  evaluations.tex  materials.tex  mystyle.sty  pdf  philosophy.tex  teaching.portfolio.tex
JobStuff/thesis.abstract/tex/: abstract.fdb_latexmk  abstract.fls  abstract.tex  style.sty
JobStuff/undergrad.research/tex/: biblio.bib  pdf  undergrad.research.tex
ProgLang/projects/1/: README  checkers.pl
ProgLang/projects/2/: README
ProgLang/tests/cpp/: CMakeLists.txt
ProgLang/tests/pro/: test.pl
USC/NSF/tex/: biblio.bib  biosketch.tex  data.mgmt.tex  pdf  project.description.tex  project.summary.tex  references.tex
USC/dissertation/tex/: .gitignore  KNCP.tex  bib.tex  biblio.bib  categories.tex  clean  dgcats.tex  dissertation.tex  enrichedcats.tex  fiberproducts.tex  gradedalgebra.tex  homalg.tex  main.tex  monoidalcats.tex  mystyle.sty  non.com.geom.tex  pdf  preliminaries.tex  style.sty  tensorcats.tex  triangulatedcats.tex  triangulatedgens.tex  uscthesismorereaders.cls  verdier.tex  yoneda.tex
USC/notes/: misc.tex  style.sty
USC/stuff/tex/: categories.tex  dgcats.tex  intro.tex  (+8 more)
configs/: kernel-config  package.keywords  package.use  wpa_supplicant.conf
qt-skeleton/cpp/: CMakeLists.txt
qt-skeleton/cpp/qt/: MainWindow.h
qt-skeleton/cpp/utils/: ConfigureQt.cmake
resume/: resume.txt
roboticsII/HW1/: run  setup
sociology/: Paper-3.20.09.doc  Paper-3.6.09.doc  Paper.01-15-09.doc  Paper.1-28-09.doc  Paper.2-6-09.doc
tex/mymath/: mymath.sty
trunk/configs/: make.conf  vpnc.conf  wpa-startscript  xorg.conf
trunk/methods/: myCGM.m  mySDM.m
trunk/qt-skeleton/cpp/qt/: CMakeLists.txt  Main.cpp  MainWindow.cpp
trunk/roboticsII/HW1/castrl/Part2/: BatController.h  CMakeLists.txt  HW1Scene.xml
trunk/roboticsII/working/hw2/castrl/partA/: CMakeLists.txt  GripControl.cpp
trunk/roboticsII/working/hw2/castrl/partA/Geometry/: CMakeLists.txt
trunk/sociology/: Paper-03.06.09.doc  Paper-03.27.09.doc  Paper.02-20-09.doc  Paper.1-22.09.doc  paper.2-13-09.doc
(+1058 files in other folders)
